add readxl, also reorder packages

--- a/inst/template.qmd
+++ b/inst/template.qmd
@@ -16,11 +16,12 @@ format:
 ```{r}
 #| message: false
 library(conflicted)
-library(here)
 library(tidyverse)
+library(umncvmstats)
+library(here)
+library(readxl)
 library(patchwork)
 library(gt)
-library(umncvmstats)
 conflicts_prefer(dplyr::filter, dplyr::lag, dplyr::select, umncvmstats::as_gt)
 ```
 
