--- a/vignettes/output.Rmd
+++ b/vignettes/output.Rmd
@@ -56,7 +56,7 @@ a |> set_digits(digits=2, by=c("SE", "ME"))
 Rounding p-values are currently handled within the `gt` mechanism, as described below.
 
 
-## Formatting output from this package
+## Formatting
 
 All output from statistical tests in this package are stored as a special object (an `atest`) that knows how to print itself in a nice way.
 
@@ -94,7 +94,7 @@ a |> as_gt() |> tab_compact()
 a |> as_gt() |> tab_compact(font.size = 11, padding = 3)
 ```
 
-### Text Output
+## Output as text
 
 To not use the `gt` style output, `print` with `as_gt=FALSE`.
 
@@ -102,9 +102,9 @@ To not use the `gt` style output, `print` with `as_gt=FALSE`.
 a |> print(as_gt=FALSE)
 ```
 
-## Raw Table
+## Output as data set
 
-To get the raw table, use `as_tibble`. You'll need to have loaded the `tibble` library, which loads as part of the `tidyverse`. There are several options for how to handle the footnotes.
+To get the underlying output as a data set, use `as_tibble`. You'll need to have loaded the `tibble` library, which loads as part of the `tidyverse`. There are several options for how to handle the footnotes.
 
 This is useful when further processing or graphics based on output is desired.
 
